--- a/2024.md
+++ b/2024.md
@@ -1,1 +1,13 @@
 ![image](https://github.com/Allen7D/ImageHosting/assets/15182982/22beffc0-332b-4ae1-a47e-5fca4cd3fac3)
+![36BF995E-55C1-4BC5-87C4-27E5E75D813E](https://github.com/Allen7D/ImageHosting/assets/15182982/8bebe644-eb47-4794-9d9f-38c755d73990)
+![Pasted Image 20231103163227_736](https://github.com/Allen7D/ImageHosting/assets/15182982/964a83c5-c1a6-4479-aa76-f6d022fe1427)
+![Pasted image 20231122165126](https://github.com/Allen7D/ImageHosting/assets/15182982/4706319a-7039-4532-91f6-f94be41af3a2)
+![Pasted image 20240108160743](https://github.com/Allen7D/ImageHosting/assets/15182982/06ca1a83-0122-49a2-89ee-dcfc9574d8ad)
+![Pasted image 20231122162919](https://github.com/Allen7D/ImageHosting/assets/15182982/9c26d341-6f3f-4219-b885-46caa037b14a)
+![Pasted image 20231122164001](https://github.com/Allen7D/ImageHosting/assets/15182982/0c494f20-f3df-48b9-8524-4689187cb49d)
+![Pasted image 20231107105112](https://github.com/Allen7D/ImageHosting/assets/15182982/1bce66e0-6d81-4903-a285-c459618ec456)
+![色彩体系](https://github.com/Allen7D/ImageHosting/assets/15182982/8f2be372-27a3-42bd-99e9-f68c284cf54b)
+![seedToken](https://github.com/Allen7D/ImageHosting/assets/15182982/b5adeb02-cbb5-44b5-8858-e0908300af7c)
+![code](https://github.com/Allen7D/ImageHosting/assets/15182982/c3a4f68b-17e8-43cd-8f23-bbbd72a73049)
+
+
