--- a/2024.md
+++ b/2024.md
@@ -11,5 +11,7 @@
 ![code](https://github.com/Allen7D/ImageHosting/assets/15182982/c3a4f68b-17e8-43cd-8f23-bbbd72a73049)
 ![7f84e68945428a7e9f6a2edbdcc2446](https://github.com/Allen7D/ImageHosting/assets/15182982/d07d826b-63d3-47b1-a5d9-bdfba2dd6e00)
 ![e2845e4eaaca69db7dd4a86c47e9fc8](https://github.com/Allen7D/ImageHosting/assets/15182982/c7781e86-09d6-486f-92a1-b760a78db62b)
+![image](https://github.com/Allen7D/ImageHosting/assets/15182982/d8949fd5-2f83-4e30-bd9d-e6d4cdea5c2e)
+
 
 
